BottomSheet creation, bug fixes and background configuration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,25 @@
     <string name="error_message">An error has occurred</string>
     <string name="minecraft_items_path">items</string>
 
+    <string name="item_image">image Item Minecraft</string>
+
     <string name="minecraft_title">MINECRAFT</string>
 
-    <string name="search_items">Search items</string>
+    <string name="search_items">Search…</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="title_image">Title Image</string>
 </resources>
 
